--- a/ProyectoTLS/src/inf/pucp/edu/pe/vista/simulacion/MenuPrincipalSimulacion.form
+++ b/ProyectoTLS/src/inf/pucp/edu/pe/vista/simulacion/MenuPrincipalSimulacion.form
@@ -28,6 +28,9 @@
   </NonVisualComponents>
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="2"/>
+    <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+      <Connection code="new Dimension(1024, 768)&#xd;&#xa;" type="code"/>
+    </Property>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
@@ -74,22 +77,24 @@
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="btnPause" min="-2" pref="40" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
-                  <Component id="btnReanudar" min="-2" pref="26" max="-2" attributes="0"/>
-                  <EmptySpace min="-2" pref="29" max="-2" attributes="0"/>
+                  <Component id="btnReanudar" min="-2" pref="37" max="-2" attributes="0"/>
+                  <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Component id="lblCantidadSemaforos" min="-2" max="-2" attributes="0"/>
                   <EmptySpace min="-2" pref="81" max="-2" attributes="0"/>
                   <Component id="lblCantidadVehiculos" min="-2" max="-2" attributes="0"/>
                   <EmptySpace min="-2" pref="88" max="-2" attributes="0"/>
                   <Component id="lblEscala" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace min="-2" pref="59" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="52" max="-2" attributes="0"/>
+                  <Component id="jLabel2" min="-2" max="-2" attributes="0"/>
+                  <EmptySpace pref="69" max="32767" attributes="0"/>
                   <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace type="separate" max="-2" attributes="0"/>
+                  <EmptySpace max="-2" attributes="0"/>
                   <Component id="btnReducirZoom" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="btnAumentarZoom" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace min="-2" pref="27" max="-2" attributes="0"/>
+                  <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Component id="btnNewWindows" min="-2" pref="40" max="-2" attributes="0"/>
-                  <EmptySpace pref="111" max="32767" attributes="0"/>
+                  <EmptySpace max="-2" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -107,6 +112,7 @@
                           <Component id="lblCantidadSemaforos" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="lblCantidadVehiculos" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="lblEscala" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="jLabel2" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                   </Group>
                   <EmptySpace min="12" max="32767" attributes="0"/>
@@ -114,7 +120,7 @@
               <Group type="102" attributes="0">
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Component id="btnReanudar" pref="0" max="32767" attributes="0"/>
-                      <Component id="btnNewWindows" pref="0" max="32767" attributes="0"/>
+                      <Component id="btnNewWindows" alignment="0" pref="0" max="32767" attributes="0"/>
                   </Group>
                   <EmptySpace max="-2" attributes="0"/>
               </Group>
@@ -164,7 +170,7 @@
         <Component class="javax.swing.JButton" name="btnReanudar">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/inf/pucp/edu/pe/Iconos/reanudar.jpg"/>
+              <Image iconType="3" name="/inf/pucp/edu/pe/Iconos/reanudar.png"/>
             </Property>
           </Properties>
           <Events>
@@ -210,7 +216,7 @@
         </Component>
         <Component class="javax.swing.JLabel" name="lblEscala">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Escala: "/>
+            <Property name="text" type="java.lang.String" value="Escala : "/>
           </Properties>
           <AuxValues>
             <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="9"/>
@@ -219,12 +225,17 @@
         <Component class="javax.swing.JButton" name="btnNewWindows">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/inf/pucp/edu/pe/Iconos/New Window.png"/>
+              <Image iconType="3" name="/inf/pucp/edu/pe/Iconos/nuevaVentana1.png"/>
             </Property>
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnNewWindowsActionPerformed"/>
           </Events>
+        </Component>
+        <Component class="javax.swing.JLabel" name="jLabel2">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="V.Promedio :"/>
+          </Properties>
         </Component>
       </SubComponents>
     </Container>
